_old/cluster-conf/metrics/ingress-other/ingress-monitor-lab_no_auth.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-lab-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-metrics-lab
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - metrics.k3lab.gq
    secretName: metrics-lab-secret
  rules:
  - host: metrics.k3lab.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: metrics-lab-svc
          servicePort: 80
